# nse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml
NSE_Downloads_Data/1-Minute-OHLCV-Data/Index/02-May-2022/: INDIA VIX.csv  NIFTY 100.csv  NIFTY 200.csv  NIFTY 50.csv  NIFTY 500.csv  NIFTY AUTO.csv  NIFTY BANK.csv  NIFTY COMMODITIES.csv  NIFTY CONSUMPTION.csv  NIFTY CPSE.csv  NIFTY DIV OPPS 50.csv  NIFTY ENERGY.csv  NIFTY FIN SERVICE.csv  NIFTY FMCG.csv  NIFTY GROWSECT 15.csv  NIFTY GS 10YR CLN.csv  NIFTY GS 10YR.csv  NIFTY GS 11 15YR.csv  NIFTY GS 15YRPLUS.csv  NIFTY GS 4 8YR.csv  NIFTY GS 8 13YR.csv  NIFTY GS COMPSITE.csv  NIFTY INFRA.csv  NIFTY IT.csv  NIFTY MEDIA.csv  NIFTY METAL.csv  NIFTY MID LIQ 15.csv  NIFTY MIDCAP 50.csv  NIFTY MNC.csv  NIFTY NEXT 50.csv  NIFTY PHARMA.csv  NIFTY PSE.csv  NIFTY PSU BANK.csv  NIFTY PVT BANK.csv  NIFTY REALTY.csv  NIFTY SERV SECTOR.csv  NIFTY100 LIQ 15.csv  NIFTY50 DIV POINT.csv  NIFTY50 PR 1X INV.csv  NIFTY50 PR 2X LEV.csv  (+3 more)
NSE_Downloads_Data/1-Minute-OHLCV-Data/Index/03-May-2022/: INDIA VIX.csv  NIFTY 100.csv  NIFTY 200.csv  NIFTY 50.csv  NIFTY 500.csv  NIFTY AUTO.csv  NIFTY BANK.csv  NIFTY COMMODITIES.csv  NIFTY CONSUMPTION.csv  NIFTY CPSE.csv  NIFTY DIV OPPS 50.csv  NIFTY ENERGY.csv  NIFTY FIN SERVICE.csv  NIFTY FMCG.csv  NIFTY GROWSECT 15.csv  NIFTY GS 10YR CLN.csv  NIFTY GS 10YR.csv  NIFTY GS 11 15YR.csv  NIFTY GS 15YRPLUS.csv  NIFTY GS 4 8YR.csv  NIFTY GS 8 13YR.csv  NIFTY GS COMPSITE.csv  NIFTY INFRA.csv  NIFTY IT.csv  NIFTY MEDIA.csv  NIFTY METAL.csv  NIFTY MID LIQ 15.csv  NIFTY MIDCAP 50.csv  NIFTY MNC.csv  NIFTY NEXT 50.csv  NIFTY PHARMA.csv  NIFTY PSE.csv  NIFTY PSU BANK.csv  NIFTY PVT BANK.csv  NIFTY REALTY.csv  NIFTY SERV SECTOR.csv  NIFTY100 LIQ 15.csv  NIFTY50 DIV POINT.csv  NIFTY50 PR 1X INV.csv  NIFTY50 PR 2X LEV.csv  (+3 more)
NSE_Downloads_Data/1-Minute-OHLCV-Data/Index/04-May-2022/: INDIA VIX.csv  NIFTY 100.csv  NIFTY 200.csv  NIFTY 50.csv  NIFTY 500.csv  NIFTY AUTO.csv  NIFTY BANK.csv  NIFTY COMMODITIES.csv  NIFTY CONSUMPTION.csv  NIFTY CPSE.csv  NIFTY DIV OPPS 50.csv  NIFTY ENERGY.csv  NIFTY FIN SERVICE.csv  NIFTY FMCG.csv  NIFTY GROWSECT 15.csv  NIFTY GS 10YR CLN.csv  NIFTY GS 10YR.csv  NIFTY GS 11 15YR.csv  NIFTY GS 15YRPLUS.csv  NIFTY GS 4 8YR.csv  NIFTY GS 8 13YR.csv  NIFTY GS COMPSITE.csv  NIFTY INFRA.csv  NIFTY IT.csv  NIFTY MEDIA.csv  NIFTY METAL.csv  NIFTY MID LIQ 15.csv  NIFTY MIDCAP 50.csv  NIFTY MNC.csv  NIFTY NEXT 50.csv  NIFTY PHARMA.csv  NIFTY PSE.csv  NIFTY PSU BANK.csv  NIFTY PVT BANK.csv  NIFTY REALTY.csv  NIFTY SERV SECTOR.csv  NIFTY100 LIQ 15.csv  NIFTY50 DIV POINT.csv  NIFTY50 PR 1X INV.csv  NIFTY50 PR 2X LEV.csv  (+3 more)
NSE_Downloads_Data/1-Minute-OHLCV-Data/Index/07-May-2022/: INDIA VIX.csv  NIFTY 100.csv  NIFTY 200.csv  NIFTY 50.csv  NIFTY 500.csv  NIFTY AUTO.csv  NIFTY BANK.csv  NIFTY COMMODITIES.csv  NIFTY CONSUMPTION.csv  NIFTY CPSE.csv  NIFTY DIV OPPS 50.csv  NIFTY ENERGY.csv  NIFTY FIN SERVICE.csv  NIFTY FMCG.csv  NIFTY GROWSECT 15.csv  NIFTY GS 10YR CLN.csv  NIFTY GS 10YR.csv  NIFTY GS 11 15YR.csv  NIFTY GS 15YRPLUS.csv  NIFTY GS 4 8YR.csv  NIFTY GS 8 13YR.csv  NIFTY GS COMPSITE.csv  NIFTY INFRA.csv  NIFTY IT.csv  NIFTY MEDIA.csv  NIFTY METAL.csv  NIFTY MID LIQ 15.csv  NIFTY MIDCAP 50.csv  NIFTY MNC.csv  NIFTY NEXT 50.csv  NIFTY PHARMA.csv  NIFTY PSE.csv  NIFTY PSU BANK.csv  NIFTY PVT BANK.csv  NIFTY REALTY.csv  NIFTY SERV SECTOR.csv  NIFTY100 LIQ 15.csv  NIFTY50 DIV POINT.csv  NIFTY50 PR 1X INV.csv  NIFTY50 PR 2X LEV.csv  (+3 more)
NSE_Downloads_Data/1-Minute-OHLCV-Data/Index/09-May-2022/: INDIA VIX.csv  NIFTY 100.csv  NIFTY 200.csv  NIFTY 50.csv  NIFTY 500.csv  NIFTY AUTO.csv  NIFTY BANK.csv  NIFTY COMMODITIES.csv  NIFTY CONSUMPTION.csv  NIFTY CPSE.csv  NIFTY DIV OPPS 50.csv  NIFTY ENERGY.csv  NIFTY FIN SERVICE.csv  NIFTY FMCG.csv  NIFTY GROWSECT 15.csv  NIFTY GS 10YR CLN.csv  NIFTY GS 10YR.csv  NIFTY INFRA.csv  (+25 more)
src/: fetch_nse_options_graph_threaded.py  main.rs  nse.rs
src/nse/: cycle_n.rs  fetchnse.rs  utils.rs
(+186 files in other folders)
