[package]
name = "nse"
version = "0.1.0"
edition = "2021"
authors = ["Ilesh Thiada (theRookieCoder) <ileshkt@gmail.com>", "薛詠謙 (KyleUltimate)", "Daniel Hauck (SolidTux)"]
description = "Ferium is a CLI program for managing Minecraft mods from Modrinth, CurseForge, and Github Releases"
exclude = ["tests"] # Don't need tests for installing using crates.io
repository = "https://github.com/theRookieCoder/ferium"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "minecraft",
    "mod-manager",
    "modrinth",
    "curseforge",
    "github"
]

[features]
default = ["gui"]
gui = ["libium/gui"]

[dependencies]
tokio = { version = "1.18", default-features = false, features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
octocrab = { version = "0.16", default-features = false, features = ["rustls"] }
clap = { version = "3.1", features = ["derive"] }
lazy_static = "1.4"
dialoguer = "0.10"
serde_json = "1.0"
itertools = "0.10"
fs_extra = "1.2"
colored = "2.0"
ferinth = "2.2"
libium = "1.12"
anyhow = "1.0"
online = "3.0"
semver = "1.0"
bytes = "1.1"
furse = "1.1"
size = "0.1"
url = "2.2"

[dev-dependencies]
rand = "0.8"





# Rust binary and library for extracting real-time data from National Stock Exchange (India)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
polars = "0.21.0"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_urlencoded = "0.7.1"
serde_json = { version = "1.0.79", features = ["raw_value"] }
rayon = "1.5.2"
rand = { version = "0.8.5", features = ["nightly", "packed_simd", "simd_support", "serde", "serde1", "small_rng", "log", "min_const_gen"] }
# isahc = "1.7.0"

[dependencies.isahc]
version = "1.7.1"
features = [
    "psl",
    "cookies",
    "http2",
    "json",
    "spnego",
    "static-curl",
    "text-decoding",
    "unstable-interceptors",
]
