[package]
name = "nse"
version = "0.1.0"
edition = "2021"
authors = ["TechfaneTechnologies <techfanetechnologies@gmail.com>"]
description = "NSE is a rust binary and library for extracting real-time data from National Stock Exchange (India)"
exclude = ["tests"] # Don't need tests for installing using crates.io
repository = "https://github.com/TechfaneTechnologies/nse"
categories = ["command-line-utilities"]
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "nse",
    "trading",
    "investing",
    "stock-market",
    "quant",
    "algotrading",
    "nse-cli",
    "qunatitative-finance",
    "indian-stock-market",
    "national-stock-exchange",
    "nifty",
    "zerodha",
    "banknifty",
    "trading-bot",
    "trading-algorithms",
    "quantitative",
    "stock-data",
    "algorithmic-trading",
    "quantitative-trading",
    "options-trading",
    "trading-platforms",
    "stocks-prices",
    "stocks-analysis",
    "qunatitative-finance"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
polars = "0.21.0"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_urlencoded = "0.7.1"
serde_json = { version = "1.0.79", features = ["raw_value"] }
rayon = "1.5.2"
rand = { version = "0.8.5", features = ["nightly", "serde", "serde1", "small_rng", "log", "min_const_gen"] }
# isahc = "1.7.0"

[dependencies.isahc]
# version = "1.7.1"
git = "https://github.com/sagebind/isahc.git"
branch = "master"
features = [
    "nightly",
    "psl",
    "cookies",
    "http2",
    "json",
    "spnego",
    "static-curl",
    "text-decoding",
    "unstable-interceptors",
    "rustls-tls",
    "rustls-tls-native-certs",
]
